--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-5.65MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-7.34MB/s(Youtube:不良林), server: 104.208.66.126, port: 10001, type: vmess, uuid: 21f6cf3d-add5-4335-ba2a-96972a7f05bf, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 104.208.66.126}}
-  - {name: 🇨🇳 中国-182.8KB/s(Youtube:不良林), server: 116.129.254.177, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-539.0KB/s(Youtube:不良林), server: 116.129.254.177, port: 65075, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇨🇳 中国-480.3KB/s(Youtube:不良林), server: 120.233.150.146, port: 65066, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 以色列-4.30MB/s(Youtube:不良林), server: ru1.lolvps.xyz, port: 50151, type: vmess, uuid: 2b8e4fc6-0112-4b26-8c17-1bfef9a3ff99, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /6129CFHR, ws-headers: {Host: ru1.lolvps.xyz}}
-  - {name: 🇸🇬 新加坡-3.62MB/s(Youtube:不良林), server: sg-04.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-04.licom.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.99MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇰🇷 韩国-2.08MB/s(Youtube:不良林), server: chess.magicefire.com, port: 443, type: vmess, uuid: 9aa80017-3427-4165-a522-f5f9a11330d0, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.52MB/s(Youtube:不良林), server: us06.xiaoqi99.cf, port: 10228, type: vmess, uuid: fbf813bf-8df7-4729-8e94-667b17544e0f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: us06.xiaoqi99.cf}}
+  - {name: 🇺🇸 美国-5.02MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.90MB/s(Youtube:不良林), server: vfly5.xyz, port: 443, type: vmess, uuid: 825136bb-fc0a-4f43-8888-dc2e36f27e2d, alterId: 60, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly5.xyz}}
+  - {name: 🇨🇳 中国-352.8KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65078, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇭🇰 香港-10.39MB/s(Youtube:不良林), server: 104.208.66.126, port: 10002, type: vmess, uuid: 9b3a6753-2f33-4e0b-bb2e-84e5076d445c, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 104.208.66.126}}
+  - {name: 🇨🇦 加拿大-1.90MB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.75MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.88MB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.90MB/s(Youtube:不良林) 2, server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.63MB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.65MB/s(Youtube:不良林)
-      - 🇭🇰 香港-7.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-182.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-539.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-480.3KB/s(Youtube:不良林)
-      - 以色列-4.30MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-10.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林) 2
+      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-5.65MB/s(Youtube:不良林)
-      - 🇭🇰 香港-7.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-182.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-539.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-480.3KB/s(Youtube:不良林)
-      - 以色列-4.30MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-10.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林) 2
+      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.65MB/s(Youtube:不良林)
-      - 🇭🇰 香港-7.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-182.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-539.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-480.3KB/s(Youtube:不良林)
-      - 以色列-4.30MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-10.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林) 2
+      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-7.34MB/s(Youtube:不良林)
+      - 🇭🇰 香港-10.39MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-5.65MB/s(Youtube:不良林)
-      - 🇭🇰 香港-7.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-182.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-539.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-480.3KB/s(Youtube:不良林)
-      - 以色列-4.30MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-10.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林) 2
+      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.65MB/s(Youtube:不良林)
-      - 🇭🇰 香港-7.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-182.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-539.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-480.3KB/s(Youtube:不良林)
-      - 以色列-4.30MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-10.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林) 2
+      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.65MB/s(Youtube:不良林)
-      - 🇭🇰 香港-7.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-182.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-539.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-480.3KB/s(Youtube:不良林)
-      - 以色列-4.30MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-10.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林) 2
+      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.65MB/s(Youtube:不良林)
-      - 🇭🇰 香港-7.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-182.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-539.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-480.3KB/s(Youtube:不良林)
-      - 以色列-4.30MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-10.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林) 2
+      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
