--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.82MB/s(Youtube:不良林), server: 72.140.224.195, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇰🇷 韩国-2.08MB/s(Youtube:不良林), server: chess.magicefire.com, port: 443, type: vmess, uuid: 9aa80017-3427-4165-a522-f5f9a11330d0, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.98MB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-769.3KB/s(Youtube:不良林), server: 81.90.190.81, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.79MB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.88MB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-2.89MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇭🇰 (已存活9天)香港-3.75MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇨🇳 中国-539.0KB/s(Youtube:不良林), server: 116.129.254.177, port: 65075, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇫🇷 法国-729.2KB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇫🇷 法国-652.2KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇯🇵 日本-2.29MB/s(Youtube:不良林), server: 89.31.126.31, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
       - 🇯🇵 日本-769.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.79MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-3.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-539.0KB/s(Youtube:不良林)
       - 🇫🇷 法国-729.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-652.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.29MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
       - 🇯🇵 日本-769.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.79MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-3.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-539.0KB/s(Youtube:不良林)
       - 🇫🇷 法国-729.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-652.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.29MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
       - 🇯🇵 日本-769.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.79MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-3.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-539.0KB/s(Youtube:不良林)
       - 🇫🇷 法国-729.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-652.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.29MB/s(Youtube:不良林)
@@ -66,17 +66,18 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活9天)香港-3.75MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
       - 🇯🇵 日本-769.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.79MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-3.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-539.0KB/s(Youtube:不良林)
       - 🇫🇷 法国-729.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-652.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.29MB/s(Youtube:不良林)
@@ -87,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
       - 🇯🇵 日本-769.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.79MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-3.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-539.0KB/s(Youtube:不良林)
       - 🇫🇷 法国-729.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-652.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.29MB/s(Youtube:不良林)
@@ -103,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
       - 🇯🇵 日本-769.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.79MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-3.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-539.0KB/s(Youtube:不良林)
       - 🇫🇷 法国-729.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-652.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.29MB/s(Youtube:不良林)
@@ -128,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
       - 🇯🇵 日本-769.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.79MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-3.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-539.0KB/s(Youtube:不良林)
       - 🇫🇷 法国-729.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-652.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.29MB/s(Youtube:不良林)
