--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇰🇷 韩国-2.08MB/s(Youtube:不良林), server: chess.magicefire.com, port: 443, type: vmess, uuid: 9aa80017-3427-4165-a522-f5f9a11330d0, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.98MB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-769.3KB/s(Youtube:不良林), server: 81.90.190.81, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇭🇰 (已存活9天)香港-3.75MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇭🇰 香港-224.8KB/s(Youtube:不良林), server: 104.208.66.126, port: 10001, type: vmess, uuid: 21f6cf3d-add5-4335-ba2a-96972a7f05bf, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 104.208.66.126}}
+  - {name: 🇨🇳 中国-523.1KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65078, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
   - {name: 🇨🇳 中国-539.0KB/s(Youtube:不良林), server: 116.129.254.177, port: 65075, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇦 加拿大-1.89MB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.91MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇫🇷 法国-729.2KB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇫🇷 法国-652.2KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇯🇵 日本-2.29MB/s(Youtube:不良林), server: 89.31.126.31, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-1.29MB/s(Youtube:不良林), server: 89.31.126.171, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇫🇷 法国-1.43MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-8.89MB/s(Youtube:不良林), server: 89.31.126.31, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-759.3KB/s(Youtube:不良林), server: 89.31.126.171, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-2.86MB/s(Youtube:不良林), server: 104.166.135.10, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 104.166.135.10}}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-2.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-769.3KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活9天)香港-3.75MB/s(Youtube:不良林)
+      - 🇭🇰 香港-224.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-523.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-539.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇫🇷 法国-729.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-652.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.29MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.89MB/s(Youtube:不良林)
+      - 🇯🇵 日本-759.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇰🇷 韩国-2.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-769.3KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活9天)香港-3.75MB/s(Youtube:不良林)
+      - 🇭🇰 香港-224.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-523.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-539.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇫🇷 法国-729.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-652.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.29MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.89MB/s(Youtube:不良林)
+      - 🇯🇵 日本-759.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,51 +52,51 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-2.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-769.3KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活9天)香港-3.75MB/s(Youtube:不良林)
+      - 🇭🇰 香港-224.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-523.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-539.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇫🇷 法国-729.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-652.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.29MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.89MB/s(Youtube:不良林)
+      - 🇯🇵 日本-759.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活9天)香港-3.75MB/s(Youtube:不良林)
+      - 🇭🇰 香港-224.8KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇰🇷 韩国-2.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-769.3KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活9天)香港-3.75MB/s(Youtube:不良林)
+      - 🇭🇰 香港-224.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-523.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-539.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇫🇷 法国-729.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-652.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.29MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.89MB/s(Youtube:不良林)
+      - 🇯🇵 日本-759.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-2.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-769.3KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活9天)香港-3.75MB/s(Youtube:不良林)
+      - 🇭🇰 香港-224.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-523.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-539.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇫🇷 法国-729.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-652.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.29MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.89MB/s(Youtube:不良林)
+      - 🇯🇵 日本-759.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -104,15 +104,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇰🇷 韩国-2.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-769.3KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活9天)香港-3.75MB/s(Youtube:不良林)
+      - 🇭🇰 香港-224.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-523.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-539.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇫🇷 法国-729.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-652.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.29MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.89MB/s(Youtube:不良林)
+      - 🇯🇵 日本-759.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -129,15 +129,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇰🇷 韩国-2.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-769.3KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活9天)香港-3.75MB/s(Youtube:不良林)
+      - 🇭🇰 香港-224.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-523.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-539.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇫🇷 法国-729.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-652.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.29MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.89MB/s(Youtube:不良林)
+      - 🇯🇵 日本-759.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
